# pytest-auto-coverage-badge-example

./: README.md  pyproject.toml
.github/workflows/: pytest-auto-badge.yml
